--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -21,12 +21,21 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.3.3",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.4.0",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "kafkajs": "^2.2.4",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
